2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-10  Kai Lahmann  <kl@linuxfaqs.de>

	* rollback.desktop: added german translation

2001-07-05  Bradford Hovinen  <hovinen@ximian.com>

	* config-manager-dialog.c: Update #include locations

	* Makefile.am (INCLUDES):
	(rollback_capplet_LDADD): Update to include ximian_archiver stuff
	correctly

2001-01-29  Bradford Hovinen  <hovinen@ximian.com>

	* rollback-widget.c (rollback_widget_realize): Check entire
	success array and warn if any allocation did not succeed

	* config-manager-dialog.c (cancel_cb): Don't do rollback

	* Makefile.am (rollback_capplet_SOURCES): Added rollback-control.[ch]

	* config-manager-dialog.c (config_manager_dialog_init): Construct
	a rollback widget with a rollback control and place it in the
	dialog

2001-01-27  Bradford Hovinen  <hovinen@ximian.com>

	* rollback-widget.c (rollback_widget_realize): Allocate control
	colors

	* rollback-widget.h (struct _RollbackWidget ): Added array
	control_colors

	* rollback-widget.c (rollback_widget_realize):
	(rollback_widget_unrealize): Implement. Just calls the parent's
	[un]realize and creates/destroys a GC to be used by the individual
	controls.
	(rollback_widget_get_gc): Implement. Return the GC created above

2001-01-25  Bradford Hovinen  <hovinen@ximian.com>

	* main.c (main): Support operating on global backends
	Add popt option for operating on global backends

2001-01-24  Bradford Hovinen  <hovinen@ximian.com>

	* config-manager-dialog.c (config_manager_dialog_finalize): Update
	unrefs
	(config_manager_dialog_init): GLADE_DIR -> GLADE_DATADIR
	(config_manager_dialog_init): Remove outdated signal connections
	(config_manager_dialog_init): Remove code to create location list
	Inherit from CappletWidget rather than GnomeDialog
	(config_manager_dialog_init): Remove gtk_window_set_policy call
	(ok_cb):
	(cancel_cb): Remove gnome_dialog_close call