@@ -1,3 +1,8 @@
+2001-09-14  Bradford Hovinen  <hovinen@ximian.com>
+
+	* rollback-capplet-dialog.c (rollback_capplet_dialog_init): Create
+	apply and close buttons, ala the setup tools
+
 2001-07-27  Bradford Hovinen  <hovinen@ximian.com>
 
 	* RELEASE : 1.5.2
